--- a/packages/table/src/scss/_global.scss
+++ b/packages/table/src/scss/_global.scss
@@ -3,7 +3,8 @@
 @mixin table-wrapper {
   width: 100%;
   overflow-x: auto;
-  background-image: -webkit-gradient(
+  background-image:
+    -webkit-gradient(
       linear,
       0% 50%,
       100% 50%,
@@ -13,27 +14,18 @@
     -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))),
     -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0))),
     -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0)));
-  background-image: -webkit-linear-gradient(
-      left,
-      core.$uq-white,
-      rgba(255, 255, 255, 0)
-    ),
+  background-image:
+    -webkit-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)),
     -webkit-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
     -webkit-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
     -webkit-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
-  background-image: -moz-linear-gradient(
-      left,
-      core.$uq-white,
-      rgba(255, 255, 255, 0)
-    ),
+  background-image:
+    -moz-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)),
     -moz-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
     -moz-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
     -moz-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
-  background-image: -o-linear-gradient(
-      left,
-      core.$uq-white,
-      rgba(255, 255, 255, 0)
-    ),
+  background-image:
+    -o-linear-gradient(left, core.$uq-white, rgba(255, 255, 255, 0)),
     -o-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
     -o-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
     -o-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
@@ -45,10 +37,18 @@
     linear-gradient(to left, core.$uq-white, rgba(255, 255, 255, 0)),
     linear-gradient(to right, core.$uq-neutral, rgba(195, 195, 197, 0)),
     linear-gradient(to left, core.$uq-neutral, rgba(195, 195, 197, 0));
-  background-position: 0 0, 100% 0, 0 0, 100% 0;
+  background-position:
+    0 0,
+    100% 0,
+    0 0,
+    100% 0;
   background-repeat: no-repeat;
   background-color: core.$uq-white;
-  background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
+  background-size:
+    4em 100%,
+    4em 100%,
+    1em 100%,
+    1em 100%;
   background-attachment: local, local, scroll, scroll;
 
   &::-webkit-scrollbar {
