--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -53,6 +53,11 @@
     transition: all ease 0.2s;
     width: 100%;
 
+    & > * {
+      margin: 0;
+    }
+
+
     @media #{core.$screen-md-up} {
       padding: core.$space-m core.$space-uul core.$space-m core.$space-l;
     }
