--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -55,6 +55,9 @@
 
     & > * {
       margin: 0;
+      color: core.$text;
+      font-size: core.$font-size-xl;
+      font-weight: 500;
     }
 
     @media #{core.$screen-md-up} {
