base color variable clean up and accordion component update

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -18,6 +18,17 @@
 $uq-black: #19151C;
 $uq-white: #fff;
 
+// Brand
+$uq-purple: #51247a;
+$uq-purple-light: #962a8b;
+$uq-gold: #bb9d65;
+$uq-red: #e62645;
+$uq-orange: #eb602b;
+$uq-yellow: #fbb800;
+$uq-blue: #4085c6;
+$uq-aqua: #00a2c7;
+$uq-green: #2ea836;
+
 // Purple
 $purple-50: #EEE9F2;
 $purple-100: #DCD3E4;
@@ -91,18 +102,7 @@ $utility-700: #105497;
 $utility-800: #124373;
 $utility-900: #15324E;
 
-$uq-purple: #51247a;
 
-
-// UQ Secondary palette
-$uq-purple-light: #962a8b;
-$uq-gold: #bb9d65;
-$uq-red: #e62645;
-$uq-orange: #eb602b;
-$uq-yellow: #fbb800;
-$uq-blue: #4085c6;
-$uq-aqua: #00a2c7;
-$uq-green: #2ea836;
 
 // UQ Neutral palette
 $uq-neutral: #d7d1cc;
