--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -20,8 +20,8 @@
 
   // Accordion item.
   &__item {
-    background: $accordion-content-bg;
-    border: 1px solid $accordion-border-color;
+    background: core.$uq-white;
+    border: 1px solid core.$grey-200;
     border-radius: 2px;
     margin-bottom: core.$space-s;
 
@@ -34,7 +34,7 @@
   &__toggle {
     -moz-appearance: none;
     -webkit-appearance: none;
-    background: $accordion-content-bg;
+    background: core.$uq-white;
     border-radius: 0;
     border-style: solid;
     border-width: 0;
@@ -85,7 +85,7 @@
     &:hover,
     &:focus {
       color: core.$text;
-      background-color: $accordion-title-bg-hover;
+      background-color: core.$grey-50;
     }
 
     &:focus {
@@ -94,7 +94,7 @@
 
     // Active toggle.
     &--active {
-      background: $accordion-content-bg;
+      background: core.$uq-white;
 
       // Open state.
       &::before {
@@ -106,7 +106,7 @@
 
       &:hover,
       &:focus {
-        background-color: $accordion-content-bg;
+        background-color: core.$uq-white;
       }
     }
   }
@@ -189,7 +189,7 @@
 // Overrides for when displayed within wysiwyg fields. (Drupal?)
 .cke_editable {
   .uq-accordion__content {
-    border: 1px dashed $accordion-editor-outline;
+    border: 1px dashed core.$utility-500;
     display: block !important;
   }
 }
