alert variables update

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -4,8 +4,8 @@
 @use "global" as *;
 
 .uq-alert {
-  background-color: $alert-info-bg-color;
-  color: $alert-text-color;
+  background-color: core.$utility-50;
+  color: core.$grey-900;
   font-family: core.$font-body;
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
@@ -23,17 +23,17 @@
   }
 
   &__title {
-    font-size: $alert-font-size-m;
-    font-weight: $alert-font-weight-medium;
+    font-size: core.$font-size-l;
+    font-weight: core.$font-weight-medium;
     line-height: core.$line-height-h;
-    color: $alert-text-color;
+    color: core.$grey-900;;
     margin: core.$space-none core.$space-none core.$space-s;
   }
 
   &__message {
     position: relative;
-    font-size: $alert-font-size-s;
-    font-weight: $alert-font-weight-thin;
+    font-size: core.$font-size-s;
+    font-weight: core.$font-weight-thin;
     line-height: core.$line-height-h;
     padding-top: core.$space-m;
     padding-bottom: core.$space-m;
@@ -97,7 +97,7 @@
   }
 
   &--info {
-    background-color: $alert-info-bg-color;
+    background-color: core.$utility-50;
 
     .uq-alert__message {
       &::before {
@@ -109,7 +109,7 @@
     }
   }
   &--success {
-    background-color: $alert-success-bg-color;
+    background-color: core.$success-50;
 
     .uq-alert__message {
       &::before {
@@ -121,7 +121,7 @@
     }
   }
   &--warning {
-    background-color: $alert-warning-bg-color;
+    background-color: core.$warning-50;
 
     .uq-alert__message {
       &::before {
@@ -133,7 +133,7 @@
     }
   }
   &--error {
-    background-color: $alert-error-bg-color;
+    background-color: core.$error-50;
 
     .uq-alert__message {
       &::before {
@@ -163,7 +163,7 @@
         core.$space-s;
 
       @media #{core.$screen-md-up} {
-        font-size: $alert-font-size;
+        font-size: core.$font-size-m;
       }
 
       @media #{core.$screen-lg-up} {
@@ -184,7 +184,7 @@
 
   // Dark variant
   &--dark {
-    background-color: $alert-global-info-bg-color;
+    background-color: core.$utility-500;
     color: core.$uq-white;
 
     a {
@@ -227,7 +227,7 @@
     }
 
     &.uq-alert--success {
-      background-color: $alert-global-success-bg-color;
+      background-color: core.$success-500;
 
       .uq-alert__message {
         &::before {
@@ -240,20 +240,20 @@
     }
 
     &.uq-alert--warning {
-      background-color: $alert-global-warning-bg-color;
-      color: $alert-text-color;
+      background-color: core.$warning-500;
+      color: core.$grey-900;;
 
       .uq-alert__title {
-        color: $alert-text-color;
+        color: core.$grey-900;;
       }
 
       a {
-        color: $alert-text-color;
+        color: core.$grey-900;;
       }
     }
 
     &.uq-alert--error {
-      background-color: $alert-global-error-bg-color;
+      background-color: core.$error-500;
 
       .uq-alert__message {
         &::before {
