update body text color to grey-900

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -144,7 +144,7 @@ $uq-purple-gradient: linear-gradient(
 );
 
 // Default text, Content
-$text: $uq-neutral-dark80;
+$text: $grey-900;
 
 // Link Blue
 $link: #1e72c6;
