--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -41,8 +41,8 @@
   }
 
   &__link {
-    border-bottom: 1px solid $linked-list-border;
-    color: $linked-list-color;
+    border-bottom: 1px solid core.$grey-200;
+    color: core.$link;
     display: block;
     font-size: 1.375rem;
     font-weight: 400;
@@ -65,7 +65,7 @@
 
     &:hover {
       background-color: core.$link;
-      color: $linked-list-color-hover;
+      color: core.$uq-white;
       text-decoration: none;
 
       &::after {
@@ -82,7 +82,7 @@
       .uq-grid-menu__link,
       .uq-grid-menu__title,
       .uq-grid-menu__description {
-        color: $linked-list-color-hover;
+        color: core.$uq-white;
         text-decoration: none;
       }
 
@@ -100,7 +100,7 @@
   }
 
   &__description {
-    color: $linked-list-desc;
+    color: core.$grey-700;
     display: block;
     font-size: 0.8rem;
     font-weight: 300;
