--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -5,7 +5,7 @@
 
 .uq-hero {
   position: relative;
-  background-color: #51247a;
+  background-color: core.$uq-purple;
   font-family: core.$font-body;
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-medium;
