--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -56,7 +56,7 @@
 
   // Shaded background
   &--shaded {
-    background-color: $section-shaded-bg;
+    background-color: core.$grey-50;
   }
 
   // Centers section header and content
