--- a/packages/side-nav/src/scss/_global.scss
+++ b/packages/side-nav/src/scss/_global.scss
@@ -1,6 +1,1 @@
-@use "@uqds/core/src/scss/global" as core;
-
-$sidenav-list-item-bg: core.$uq-neutral-light80;
-$sidenav-list-item-active-bg: core.$uq-neutral-light40;
-$sidenav-list-item-divider: core.$uq-neutral-light40;
-$sidenav-list-item-animation-distance: core.$space-s;
+// Variables, functions, and mixins
