--- a/packages/table/src/scss/_global.scss
+++ b/packages/table/src/scss/_global.scss
@@ -11,40 +11,40 @@
       color-stop(100%, rgba(255, 255, 255, 0))
     ),
     -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-white), color-stop(100%, rgba(255, 255, 255, 0))),
-    -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0))),
-    -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$uq-neutral-dark20), color-stop(100%, rgba(195, 195, 197, 0)));
+    -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, core.$grey-500), color-stop(100%, rgba(195, 195, 197, 0))),
+    -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, core.$grey-500), color-stop(100%, rgba(195, 195, 197, 0)));
   background-image: -webkit-linear-gradient(
       left,
       core.$uq-white,
       rgba(255, 255, 255, 0)
     ),
     -webkit-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
-    -webkit-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
-    -webkit-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
+    -webkit-linear-gradient(left, core.$grey-300 rgba(195, 195, 197, 0)),
+    -webkit-linear-gradient(right, core.$grey-300 rgba(195, 195, 197, 0));
   background-image: -moz-linear-gradient(
       left,
       core.$uq-white,
       rgba(255, 255, 255, 0)
     ),
     -moz-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
-    -moz-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
-    -moz-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
+    -moz-linear-gradient(left, core.$grey-300 rgba(195, 195, 197, 0)),
+    -moz-linear-gradient(right, core.$grey-300 rgba(195, 195, 197, 0));
   background-image: -o-linear-gradient(
       left,
       core.$uq-white,
       rgba(255, 255, 255, 0)
     ),
     -o-linear-gradient(right, core.$uq-white, rgba(255, 255, 255, 0)),
-    -o-linear-gradient(left, core.$uq-neutral, rgba(195, 195, 197, 0)),
-    -o-linear-gradient(right, core.$uq-neutral, rgba(195, 195, 197, 0));
+    -o-linear-gradient(left, core.$grey-300 rgba(195, 195, 197, 0)),
+    -o-linear-gradient(right, core.$grey-300 rgba(195, 195, 197, 0));
   background-image: linear-gradient(
       left,
       core.$uq-white,
       rgba(255, 255, 255, 0)
     ),
     linear-gradient(to left, core.$uq-white, rgba(255, 255, 255, 0)),
-    linear-gradient(to right, core.$uq-neutral, rgba(195, 195, 197, 0)),
-    linear-gradient(to left, core.$uq-neutral, rgba(195, 195, 197, 0));
+    linear-gradient(to right, core.$grey-300 rgba(195, 195, 197, 0)),
+    linear-gradient(to left, core.$grey-300 rgba(195, 195, 197, 0));
   background-position: 0 0, 100% 0, 0 0, 100% 0;
   background-repeat: no-repeat;
   background-color: core.$uq-white;
@@ -60,7 +60,7 @@
   &::-webkit-scrollbar-thumb {
     border-radius: 0.5rem;
     border: 1px solid core.$uq-white;
-    background-color: rgba(core.$uq-black, 0.3);
+    background-color: core.$grey-500;
   }
 }
 @mixin table {
@@ -75,7 +75,7 @@
   font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
-  color: core.$uq-neutral-dark80;
+  color: core.$text;
   list-style: none;
 
   *,
@@ -106,14 +106,14 @@
 }
 @mixin table-cell {
   padding: core.$space-s core.$space-m;
-  border: 1px solid core.$uq-neutral;
+  border: 1px solid core.$grey-200;
   text-align: left;
 }
 @mixin table-header {
   padding: core.$space-s core.$space-m;
   color: core.$uq-purple;
   text-align: left;
-  border: 1px solid core.$uq-neutral;
+  border: 1px solid core.$grey-200;
   font-weight: core.$font-weight-bold;
-  background-color: rgba(core.$uq-neutral, 0.3);
+  background-color: core.$grey-50;
 }
