--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -15,7 +15,7 @@
 // UQ Brand colours
 
 // Base
-$uq-black: #19151C;
+$uq-black: #19151c;
 $uq-white: #fff;
 
 // Brand
@@ -30,79 +30,77 @@ $uq-aqua: #00a2c7;
 $uq-green: #2ea836;
 
 // Purple
-$purple-50: #EEE9F2;
-$purple-100: #DCD3E4;
-$purple-200: #B9A7CA;
-$purple-300: #977CAF;
+$purple-50: #eee9f2;
+$purple-100: #dcd3e4;
+$purple-200: #b9a7ca;
+$purple-300: #977caf;
 $purple-400: #745095;
-$purple-500: #51247A;
+$purple-500: #51247a;
 $purple-600: #462266;
-$purple-650: #40205D;
-$purple-700: #3A1F53;
-$purple-800: #2F1D3F;
-$purple-900: #231A2C;
+$purple-650: #40205d;
+$purple-700: #3a1f53;
+$purple-800: #2f1d3f;
+$purple-900: #231a2c;
 
 // Grey
-$grey-50: #F3F3F4;
-$grey-100: #E8E8E8;
-$grey-200: #DCDCDD;
-$grey-300: #D1D0D2;
-$grey-400: #BAB9BB;
-$grey-500: #A3A1A4;
-$grey-600: #8C8A8D;
+$grey-50: #f3f3f4;
+$grey-100: #e8e8e8;
+$grey-200: #dcdcdd;
+$grey-300: #d1d0d2;
+$grey-400: #bab9bb;
+$grey-500: #a3a1a4;
+$grey-600: #8c8a8d;
 $grey-700: #757377;
-$grey-800: #5E5B60;
-$grey-900: #3B383E;
+$grey-800: #5e5b60;
+$grey-900: #3b383e;
 
 // Error
-$error-50: #FBEAEA;
-$error-100: #F7D4D4;
-$error-200: #EFA9A9;
-$error-300: #E67F7F;
-$error-400: #DE5454;
-$error-500: #D62929;
-$error-600: #C32727;
-$error-700: #9D2424;
+$error-50: #fbeaea;
+$error-100: #f7d4d4;
+$error-200: #efa9a9;
+$error-300: #e67f7f;
+$error-400: #de5454;
+$error-500: #d62929;
+$error-600: #c32727;
+$error-700: #9d2424;
 $error-800: #772020;
-$error-900: #511D1D;
+$error-900: #511d1d;
 
 // Success
-$success-50: #EDF6ED;
-$success-100: #DBEDDC;
-$success-200: #B7DCB8;
-$success-300: #92CA95;
-$success-400: #6EB971;
-$success-500: #4AA74E;
+$success-50: #edf6ed;
+$success-100: #dbeddc;
+$success-200: #b7dcb8;
+$success-300: #92ca95;
+$success-400: #6eb971;
+$success-500: #4aa74e;
 $success-600: #459949;
-$success-700: #3B7C3E;
-$success-800: #315F33;
+$success-700: #3b7c3e;
+$success-800: #315f33;
 $success-900: #274328;
 
 // Warning
-$warning-50: #FEF8E8;
-$warning-100: #FDF1D2;
-$warning-200: #FCE3A5;
-$warning-300: #FAD678;
-$warning-400: #F9C84B;
-$warning-500: #F7BA1E;
-$warning-600: #E1AA1D;
-$warning-700: #B4891C;
-$warning-800: #87691B;
-$warning-900: #5B491A;
+$warning-50: #fef8e8;
+$warning-100: #fdf1d2;
+$warning-200: #fce3a5;
+$warning-300: #fad678;
+$warning-400: #f9c84b;
+$warning-500: #f7ba1e;
+$warning-600: #e1aa1d;
+$warning-700: #b4891c;
+$warning-800: #87691b;
+$warning-900: #5b491a;
 
 // Utility
-$utility-50: #E7F0FA;
-$utility-100: #CFE2F5;
-$utility-200: #9EC5EB;
-$utility-300: #6EA7E1;
-$utility-400: #3D8AD7;
-$utility-500: #0D6DCD;
-$utility-600: #0E65BB;
+$utility-50: #e7f0fa;
+$utility-100: #cfe2f5;
+$utility-200: #9ec5eb;
+$utility-300: #6ea7e1;
+$utility-400: #3d8ad7;
+$utility-500: #0d6dcd;
+$utility-600: #0e65bb;
 $utility-700: #105497;
 $utility-800: #124373;
-$utility-900: #15324E;
-
-
+$utility-900: #15324e;
 
 // UQ Neutral palette
 $uq-neutral: #d7d1cc;
