--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -36,7 +36,7 @@ $purple-200: #b9a7ca;
 $purple-300: #977caf;
 $purple-400: #745095;
 $purple-500: #51247a;
-$purple-600: #462266;
+$purple-600: #4B2271;
 $purple-650: #40205d;
 $purple-700: #3a1f53;
 $purple-800: #2f1d3f;
