docs: add wrapper docs for uq-breadcrumb, update aria-label

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav class="uq-breadcrumb" aria-label="breadcrumb">
+<nav class="uq-breadcrumb" aria-label="Breadcrumb">
   <ol class="uq-breadcrumb__list">
     <li class="uq-breadcrumb__item">
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
